feat: add Sumit tokenize SDK script

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
   <div id="root"></div>
+  <!-- Sumit Payment SDK (optional - for frontend tokenization) -->
+  <script src="https://api.sumit.co.il/Scripts/Sumit.Tokenize.min.js"></script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
