--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,25 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Botomat - בניית בוטים לוואטסאפ</title>
-  <meta name="description" content="Botomat - פלטפורמת בניית בוטים לוואטסאפ. אוטומציה של תהליכי מכירות, שירות לקוחות ותקשורת עסקית. בנו בוטים חכמים בקלות ובלי קוד." />
-  <meta name="keywords" content="בוט וואטסאפ, אוטומציה, בוטים, WhatsApp bot, שירות לקוחות, מכירות, Botomat" />
+  <meta http-equiv="content-language" content="he" />
+  
+  <!-- Primary Meta Tags -->
+  <title>Botomat | בניית בוטים לוואטסאפ ואוטומציה לעסקים</title>
+  <meta name="title" content="Botomat | בניית בוטים לוואטסאפ ואוטומציה לעסקים" />
+  <meta name="description" content="Botomat - פלטפורמת בניית בוטים לוואטסאפ מתקדמת. אוטומציה של שירות לקוחות, מכירות ותקשורת עסקית 24/7. בנו בוטים חכמים בקלות, בלי קוד. התחילו בחינם!" />
+  <meta name="keywords" content="בוט וואטסאפ, בניית בוטים, אוטומציה לעסקים, WhatsApp bot, שירות לקוחות אוטומטי, מכירות וואטסאפ, צאטבוט, Botomat, בוט לעסק" />
   <meta name="author" content="Botomat" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+  
+  <!-- Canonical URL - forces HTTPS -->
   <link rel="canonical" href="https://botomat.co.il/" />
 
   <!-- Open Graph / Facebook / WhatsApp -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://botomat.co.il/" />
-  <meta property="og:title" content="Botomat - בניית בוטים לוואטסאפ" />
-  <meta property="og:description" content="פלטפורמת בניית בוטים לוואטסאפ. אוטומציה של תהליכי מכירות, שירות לקוחות ותקשורת עסקית. בנו בוטים חכמים בקלות ובלי קוד." />
+  <meta property="og:title" content="Botomat | בניית בוטים לוואטסאפ ואוטומציה לעסקים" />
+  <meta property="og:description" content="פלטפורמת בניית בוטים לוואטסאפ מתקדמת. אוטומציה של שירות לקוחות, מכירות ותקשורת עסקית 24/7. בנו בוטים חכמים בקלות, בלי קוד!" />
   <meta property="og:image" content="https://botomat.co.il/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="Botomat" />
   <meta property="og:locale" content="he_IL" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Botomat - בניית בוטים לוואטסאפ" />
-  <meta name="twitter:description" content="פלטפורמת בניית בוטים לוואטסאפ. אוטומציה של תהליכי מכירות, שירות לקוחות ותקשורת עסקית." />
+  <meta name="twitter:title" content="Botomat | בניית בוטים לוואטסאפ ואוטומציה לעסקים" />
+  <meta name="twitter:description" content="פלטפורמת בניית בוטים לוואטסאפ מתקדמת. אוטומציה של שירות לקוחות, מכירות ותקשורת עסקית 24/7." />
   <meta name="twitter:image" content="https://botomat.co.il/og-image.png" />
 
   <!-- Favicon -->
@@ -32,6 +42,29 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Structured Data / Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Botomat",
+    "description": "פלטפורמת בניית בוטים לוואטסאפ ואוטומציה לעסקים",
+    "url": "https://botomat.co.il",
+    "applicationCategory": "BusinessApplication",
+    "operatingSystem": "Web",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "ILS"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "5",
+      "ratingCount": "50"
+    }
+  }
+  </script>
 </head>
 <body>
   <div id="root"></div>
