--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,8 +20,8 @@
   <!-- Open Graph / Facebook / WhatsApp -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://botomat.co.il/" />
-  <meta property="og:title" content="Botomat | בניית בוטים לוואטסאפ ואוטומציה לעסקים" />
-  <meta property="og:description" content="פלטפורמת בניית בוטים לוואטסאפ מתקדמת. אוטומציה של שירות לקוחות, מכירות ותקשורת עסקית 24/7. בנו בוטים חכמים בקלות, בלי קוד!" />
+  <meta property="og:title" content="Botomat - בוטים חכמים לוואטסאפ" />
+  <meta property="og:description" content="הפוך את הוואטסאפ שלך לכלי מכירות ושירות לקוחות אוטומטי. בנה בוטים חכמים בקלות, בלי קוד!" />
   <meta property="og:image" content="https://botomat.co.il/og-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -30,8 +30,8 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Botomat | בניית בוטים לוואטסאפ ואוטומציה לעסקים" />
-  <meta name="twitter:description" content="פלטפורמת בניית בוטים לוואטסאפ מתקדמת. אוטומציה של שירות לקוחות, מכירות ותקשורת עסקית 24/7." />
+  <meta name="twitter:title" content="Botomat - בוטים חכמים לוואטסאפ" />
+  <meta name="twitter:description" content="הפוך את הוואטסאפ שלך לכלי מכירות ושירות לקוחות אוטומטי." />
   <meta name="twitter:image" content="https://botomat.co.il/og-image.png" />
 
   <!-- Favicon -->
