--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,19 +49,14 @@
     "@context": "https://schema.org",
     "@type": "SoftwareApplication",
     "name": "Botomat",
-    "description": "פלטפורמת בניית בוטים לוואטסאפ ואוטומציה לעסקים",
+    "description": "בניית בוטים לוואטסאפ ואוטומציות עסקיות חכמות",
     "url": "https://botomat.co.il",
     "applicationCategory": "BusinessApplication",
-    "operatingSystem": "Web",
+    "operatingSystem": "All",
     "offers": {
       "@type": "Offer",
       "price": "0",
       "priceCurrency": "ILS"
-    },
-    "aggregateRating": {
-      "@type": "AggregateRating",
-      "ratingValue": "5",
-      "ratingCount": "50"
     }
   }
   </script>
